# Data_processing_and_storage

./: README.md
XML/: schema.xsd  settings.gradle
clojure/: task1.txt  task2.txt  task3.txt  task4.txt
db/: .env  main.py  pyproject.toml
db/db/api/: base.py
db/db/api/v1/: airports_route.py  booking_route.py  check_in_route.py  cities_route.py  city_route.py  price_route.py
db/db/core/: settings.py
db/db/database/: base.py  base_model.py  session.py
db/db/database/entity/: booking.py  ticket.py
db/db/database/models/: airport_model.py  boarding_pass_nodel.py  flight_model.py  flight_price.py  price_model.py  ticket_flight_model.py
db/db/database/repository/: airport_repository.py  booking_repository.py  check_in_repository.py  city_repository.py  prices_repository.py
db/db/database/repository/utils/: booking_ids.py  day_of_week.py
db/db/schemas/: airport_schema.py  booking_schema.py  check_in_schema.py  price_schema.py
db/db/schemas/shedules/: inbound_shema.py  outbound_shema.py
task1/: FirstTask.java
task10/: Mutex.java  Writer.java
task11/: Semaph.java  ThreadsBehavior.java  Writer.java
task12/: List.java
task13/: Fork.java  Philos.java
task14/: Maker.java  MakerA.java  MakerB.java  MakerM.java  MakerW.java  Piece.java  PieceA.java  PieceB.java  PieceC.java  Widget.java
task15/: EchoServer.java  Output.java  PipeDemo.java  Proxy.java
task16/: Client.java
task2/: Join.java
task3/: FourThreads.java
task4/: Interrupt.java
task5/: Interrupt2.java
task6/: Department.java  Founder.java
task7/: Pi.java
task8/: SIGINT.java  (+1 more)
(+181 files in other folders)
