[tool.poetry]
name = "db"
version = "0.1.0"
description = ""
authors = ["Dmitry Muraviev <MuravjevDV@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
